add hyperparams for continuous mountain car

--- a/hyperparams/mpc_ppo.yml
+++ b/hyperparams/mpc_ppo.yml
@@ -1,4 +1,3 @@
-
 PendulumMPC-v1:
   vec_env_wrapper: mpc_baselines.wrappers.VecMPCStateWrapper
   n_envs: 4
@@ -17,3 +16,23 @@ PendulumMPC-v1:
   clip_range: 0.2
   use_sde: True
   sde_sample_freq: 4
+
+# Tuned
+MountainCarContinuous-v0:
+  normalize: true
+  n_envs: 1
+  n_timesteps: !!float 20000
+  vec_env_wrapper: mpc_baselines.wrappers.VecMPCStateWrapper
+  policy: 'MlpPolicy'
+  batch_size: 256
+  n_steps: 8
+  gamma: 0.9999
+  learning_rate: !!float 7.77e-05
+  ent_coef: 0.00429
+  clip_range: 0.1
+  n_epochs: 10
+  gae_lambda: 0.9
+  max_grad_norm: 5
+  vf_coef: 0.19
+  use_sde: True
+  policy_kwargs: "dict(log_std_init=-3.29, ortho_init=False)"
