--- a/hyperparams/mpc_sac.yml
+++ b/hyperparams/mpc_sac.yml
@@ -12,3 +12,23 @@ PendulumMPC-v1:
     mpc_horizon: 3
   mpc_state_dim: 2
   learning_rate: !!float 1e-3
+
+MountainCarContinuousMPC-v0:
+  n_timesteps: !!float 50000
+  vec_env_wrapper: mpc_baselines.wrappers.VecMPCStateWrapper
+  policy: 'MPCMlpPolicy'
+  learning_rate: !!float 3e-4
+  buffer_size: 50000
+  batch_size: 512
+  ent_coef: 0.1
+  train_freq: 32
+  gradient_steps: 32
+  gamma: 0.9999
+  tau: 0.01
+  learning_starts: 0
+  use_sde: True
+  policy_kwargs: 
+    dynamics: mpc_baselines.dynamics.PendulumDynamics
+    mpc_horizon: 3
+    log_std_init: -3.67 
+    net_arch: [64, 64]
