--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 gym==0.26.2
-stable-baselines3[extra_no_roms,tests,docs]>=2.4.0a10,<3.0
+stable-baselines3[extra,tests,docs]>=2.4.0a11,<3.0
 box2d-py==2.3.8
-pybullet_envs_gymnasium>=0.4.0
+pybullet_envs_gymnasium>=0.5.0
 # minigrid
 cloudpickle>=2.2.1
 # optuna plots:
@@ -9,4 +9,4 @@ plotly
 # need to upgrade to gymnasium:
 # panda-gym~=3.0.1
 wandb
-moviepy
+moviepy>=1.0.0
