Add support for special `VecEnv` (brax, IsaacSim, ...) (#484)
* Allow to change default VecEnv

* Add default vec env cls argument

* Fix normalization loading for objects

* Save exact command used when training, update changelog

* Update HF api usage

* Fix log-interval default behavior and upgrade to gym v1.1

* Add HF token to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
     env:
       TERM: xterm-256color
       FORCE_COLOR: 1
+      HF_TOKEN: ${{ secrets.HF_TOKEN }}
     # Skip CI if [ci skip] in the commit message
     if: "! contains(toJSON(github.event.commits.*.message), '[ci skip]')"
     runs-on: ubuntu-latest
