--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 gym==0.26.2
-stable-baselines3[extra,tests,docs]>=2.5.0,<3.0
+stable-baselines3[extra,tests,docs]>=2.6.0a2,<3.0
 box2d-py==2.3.8
-pybullet_envs_gymnasium>=0.5.0
+pybullet_envs_gymnasium>=0.6.0
 # minigrid
 cloudpickle>=2.2.1
 # optuna plots:
