Refactor hyperparameter optimization (#485)
* Start refactoring hyperparam optim

* Remove hardcoded env for success recording

* Refactor all algos

* Bug fixes

* Update doc and add test

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ box2d-py==2.3.8
 pybullet_envs_gymnasium>=0.6.0
 # minigrid
 cloudpickle>=2.2.1
+# Optuna auto
+optunahub>=0.2.0
 # optuna plots:
 plotly
 # need to upgrade to gymnasium:
