Use schedule class instead of lambdas (#493)
* Use schedule class instead of lambdas

* Add test for linear schedule

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 gym==0.26.2
-stable-baselines3[extra,tests,docs]>=2.6.0,<3.0
+stable-baselines3[extra,tests,docs]>=2.6.1a1,<3.0
 box2d-py==2.3.8
 pybullet_envs_gymnasium>=0.6.0
 # minigrid
