--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
         run: |
           uv pip install --system gymnasium==${{ matrix.gymnasium-version }}
           uv pip install --system "numpy<2"
+          uv pip install --system "ale-py==0.10.1"
         # Only run for python 3.10, downgrade gym to 0.29.1
         if: matrix.gymnasium-version != '1.0.0'
 
